--- a/chi-tiet-sp.html
+++ b/chi-tiet-sp.html
@@ -23,7 +23,7 @@
                 </li>
                 <li><a href="danh-muc-sp.html">Sản phẩm</a></li>
                 <li><a href="gio-hang.html">Giỏ hàng</a></li>
-                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="gioi-thieu.html">Giới thiệu</a></li>
             </ul>
             <div class="search">
                 <input type="text" placeholder="Bạn cần tìm gì?">
@@ -316,7 +316,7 @@
     </section>
     <div class="footer">
         <div class="plc">
-            <ul class="flexContain">
+            <ul class="flex-contain">
                 <li>Giao hàng hỏa tốc trong 1 giờ</li>
                 <li>Thanh toán linh hoạt: tiền mặt, visa / master, trả góp</li>
                 <li>Trải nghiệm sản phẩm tại nhà</li>
