--- a/gio-hang.html
+++ b/gio-hang.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBShop</title>
     <link rel="shortcut icon" href="img/logonho.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/gio-hang.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
